generated/SIMPParser.cpp

// Generated from SIMP.g4 by ANTLR 4.13.1


#include "SIMPListener.h"
#include "SIMPVisitor.h"

#include "SIMPParser.h"


using namespace antlrcpp;
using namespace antlrcpptest;

using namespace antlr4;

namespace {

struct SIMPParserStaticData final {
  SIMPParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  SIMPParserStaticData(const SIMPParserStaticData&) = delete;
  SIMPParserStaticData(SIMPParserStaticData&&) = delete;
  SIMPParserStaticData& operator=(const SIMPParserStaticData&) = delete;
  SIMPParserStaticData& operator=(SIMPParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag simpParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
SIMPParserStaticData *simpParserStaticData = nullptr;

void simpParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (simpParserStaticData != nullptr) {
    return;
  }
#else
  assert(simpParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<SIMPParserStaticData>(
    std::vector<std::string>{
      "simpProgram", "declSegment", "varDeclList", "funcDeclList", "type", 
      "typeId", "varDecl", "idList", "optionalInit", "funcDecl", "paramList", 
      "retType", "param", "stmtList", "stmt", "letStmt", "returnStmt", "breakStmt", 
      "forStmt", "whileStmt", "assignStmt", "rValue", "rcallStmt", "callStmt", 
      "ifStmt", "ifStmtTail", "expr", "leTerm", "geTerm", "ltTerm", "gtTerm", 
      "neTerm", "eqTerm", "subTerm", "addTerm", "divTerm", "mulTerm", "parnTerm", 
      "constant", "exprList", "lvalue"
    },
    std::vector<std::string>{
      "", "'main'", "'break'", "'do'", "'else'", "'end'", "'for'", "'function'", 
      "'if'", "'in'", "'let'", "'of'", "'then'", "'to'", "'downto'", "'type'", 
      "'var'", "'while'", "'endif'", "'begin'", "'enddo'", "'return'", "'int'", 
      "'float'", "'+'", "'-'", "'*'", "'/'", "'=='", "'!='", "'<'", "'>'", 
      "'<='", "'>='", "'&'", "'|'", "':='", "'='", "':'", "';'", "','", 
      "'('", "')'", "'['", "']'"
    },
    std::vector<std::string>{
      "", "KeywordMain", "KeywordBreak", "KeywordDo", "KeywordElse", "KeywordEnd", 
      "KeywordFor", "KeywordFunction", "KeywordIf", "KeywordIn", "KeywordLet", 
      "KeywordOf", "KeywordThen", "KeywordTo", "KeywordDownto", "KeywordType", 
      "KeywordVar", "KeywordWhile", "KeywordEndif", "KeywordBegin", "KeywordEnddo", 
      "KeywordReturn", "KeywordInt", "KeywordFloat", "BinOpPlus", "BinOpMinus", 
      "BinOpTimes", "BinOpDivide", "BinOpEq", "BinOpNeq", "BinOpLt", "BinOpGt", 
      "BinOpLeq", "BinOpGeq", "BinOpAnd", "BinOpOr", "OpAssign", "Equals", 
      "Colon", "Semicolon", "Comma", "LParen", "RParen", "LBracket", "RBracket", 
      "ID", "IntLit", "FloatLit", "Comment", "Whitespace"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  simpParserStaticData = staticData.release();
}

}

SIMPParser::SIMPParser(TokenStream *input) : SIMPParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

SIMPParser::SIMPParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  SIMPParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *simpParserStaticData->atn, simpParserStaticData->decisionToDFA, simpParserStaticData->sharedContextCache, options);
}

SIMPParser::~SIMPParser() {
  delete _interpreter;
}

const atn::ATN& SIMPParser::getATN() const {
  return *simpParserStaticData->atn;
}

std::string SIMPParser::getGrammarFileName() const {
  return "SIMP.g4";
}

const std::vector<std::string>& SIMPParser::getRuleNames() const {
  return simpParserStaticData->ruleNames;
}

const dfa::Vocabulary& SIMPParser::getVocabulary() const {
  return simpParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView SIMPParser::getSerializedATN() const {
  return simpParserStaticData->serializedATN;
}


//----------------- SimpProgramContext ------------------------------------------------------------------

SIMPParser::SimpProgramContext::SimpProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SIMPParser::SimpProgramContext::KeywordMain() {
  return getToken(SIMPParser::KeywordMain, 0);
}

tree::TerminalNode* SIMPParser::SimpProgramContext::KeywordLet() {
  return getToken(SIMPParser::KeywordLet, 0);
}

SIMPParser::DeclSegmentContext* SIMPParser::SimpProgramContext::declSegment() {
  return getRuleContext<SIMPParser::DeclSegmentContext>(0);
}

tree::TerminalNode* SIMPParser::SimpProgramContext::KeywordIn() {
  return getToken(SIMPParser::KeywordIn, 0);
}

tree::TerminalNode* SIMPParser::SimpProgramContext::KeywordBegin() {
  return getToken(SIMPParser::KeywordBegin, 0);
}

SIMPParser::StmtListContext* SIMPParser::SimpProgramContext::stmtList() {
  return getRuleContext<SIMPParser::StmtListContext>(0);
}

tree::TerminalNode* SIMPParser::SimpProgramContext::KeywordEnd() {
  return getToken(SIMPParser::KeywordEnd, 0);
}


size_t SIMPParser::SimpProgramContext::getRuleIndex() const {
  return SIMPParser::RuleSimpProgram;
}

void SIMPParser::SimpProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SIMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSimpProgram(this);
}

void SIMPParser::SimpProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SIMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSimpProgram(this);
}


std::any SIMPParser::SimpProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SIMPVisitor*>(visitor))
    return parserVisitor->visitSimpProgram(this);
  else
    return visitor->visitChildren(this);
}

SIMPParser::SimpProgramContext* SIMPParser::simpProgram() {
  SimpProgramContext *_localctx = _tracker.createInstance<SimpProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, SIMPParser::RuleSimpProgram);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    match(SIMPParser::KeywordMain);
    setState(83);
    match(SIMPParser::KeywordLet);
    setState(84);
    declSegment();
    setState(85);
    match(SIMPParser::KeywordIn);
    setState(86);
    match(SIMPParser::KeywordBegin);
    setState(87);
    stmtList();
    setState(88);
    match(SIMPParser::KeywordEnd);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclSegmentContext ------------------------------------------------------------------

SIMPParser::DeclSegmentContext::DeclSegmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SIMPParser::VarDeclListContext* SIMPParser::DeclSegmentContext::varDeclList() {
  return getRuleContext<SIMPParser::VarDeclListContext>(0);
}

SIMPParser::FuncDeclListContext* SIMPParser::DeclSegmentContext::funcDeclList() {
  return getRuleContext<SIMPParser::FuncDeclListContext>(0);
}


size_t SIMPParser::DeclSegmentContext::getRuleIndex() const {
  return SIMPParser::RuleDeclSegment;
}

void SIMPParser::DeclSegmentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SIMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclSegment(this);
}

void SIMPParser::DeclSegmentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SIMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclSegment(this);
}


std::any SIMPParser::DeclSegmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SIMPVisitor*>(visitor))
    return parserVisitor->visitDeclSegment(this);
  else
    return visitor->visitChildren(this);
}

SIMPParser::DeclSegmentContext* SIMPParser::declSegment() {
  DeclSegmentContext *_localctx = _tracker.createInstance<DeclSegmentContext>(_ctx, getState());
  enterRule(_localctx, 2, SIMPParser::RuleDeclSegment);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    varDeclList();
    setState(91);
    funcDeclList();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclListContext ------------------------------------------------------------------

SIMPParser::VarDeclListContext::VarDeclListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SIMPParser::VarDeclContext *> SIMPParser::VarDeclListContext::varDecl() {
  return getRuleContexts<SIMPParser::VarDeclContext>();
}

SIMPParser::VarDeclContext* SIMPParser::VarDeclListContext::varDecl(size_t i) {
  return getRuleContext<SIMPParser::VarDeclContext>(i);
}


size_t SIMPParser::VarDeclListContext::getRuleIndex() const {
  return SIMPParser::RuleVarDeclList;
}

void SIMPParser::VarDeclListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SIMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarDeclList(this);
}

void SIMPParser::VarDeclListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SIMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarDeclList(this);
}


std::any SIMPParser::VarDeclListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SIMPVisitor*>(visitor))
    return parserVisitor->visitVarDeclList(this);
  else
    return visitor->visitChildren(this);
}

SIMPParser::VarDeclListContext* SIMPParser::varDeclList() {
  VarDeclListContext *_localctx = _tracker.createInstance<VarDeclListContext>(_ctx, getState());
  enterRule(_localctx, 4, SIMPParser::RuleVarDeclList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(96);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SIMPParser::KeywordVar) {
      setState(93);
      varDecl();
      setState(98);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncDeclListContext ------------------------------------------------------------------

SIMPParser::FuncDeclListContext::FuncDeclListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SIMPParser::FuncDeclContext *> SIMPParser::FuncDeclListContext::funcDecl() {
  return getRuleContexts<SIMPParser::FuncDeclContext>();
}

SIMPParser::FuncDeclContext* SIMPParser::FuncDeclListContext::funcDecl(size_t i) {
  return getRuleContext<SIMPParser::FuncDeclContext>(i);
}


size_t SIMPParser::FuncDeclListContext::getRuleIndex() const {
  return SIMPParser::RuleFuncDeclList;
}

void SIMPParser::FuncDeclListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SIMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFuncDeclList(this);
}

void SIMPParser::FuncDeclListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SIMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFuncDeclList(this);
}


std::any SIMPParser::FuncDeclListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SIMPVisitor*>(visitor))
    return parserVisitor->visitFuncDeclList(this);
  else
    return visitor->visitChildren(this);
}

SIMPParser::FuncDeclListContext* SIMPParser::funcDeclList() {
  FuncDeclListContext *_localctx = _tracker.createInstance<FuncDeclListContext>(_ctx, getState());
  enterRule(_localctx, 6, SIMPParser::RuleFuncDeclList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(102);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SIMPParser::KeywordFunction) {
      setState(99);
      funcDecl();
      setState(104);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

SIMPParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SIMPParser::TypeIdContext* SIMPParser::TypeContext::typeId() {
  return getRuleContext<SIMPParser::TypeIdContext>(0);
}

tree::TerminalNode* SIMPParser::TypeContext::ID() {
  return getToken(SIMPParser::ID, 0);
}


size_t SIMPParser::TypeContext::getRuleIndex() const {
  return SIMPParser::RuleType;
}

void SIMPParser::TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SIMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType(this);
}

void SIMPParser::TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SIMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType(this);
}


std::any SIMPParser::TypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SIMPVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}

SIMPParser::TypeContext* SIMPParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 8, SIMPParser::RuleType);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(107);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SIMPParser::KeywordInt:
      case SIMPParser::KeywordFloat: {
        enterOuterAlt(_localctx, 1);
        setState(105);
        typeId();
        break;
      }

      case SIMPParser::ID: {
        enterOuterAlt(_localctx, 2);
        setState(106);
        match(SIMPParser::ID);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeIdContext ------------------------------------------------------------------

SIMPParser::TypeIdContext::TypeIdContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SIMPParser::TypeIdContext::KeywordInt() {
  return getToken(SIMPParser::KeywordInt, 0);
}

tree::TerminalNode* SIMPParser::TypeIdContext::KeywordFloat() {
  return getToken(SIMPParser::KeywordFloat, 0);
}


size_t SIMPParser::TypeIdContext::getRuleIndex() const {
  return SIMPParser::RuleTypeId;
}

void SIMPParser::TypeIdContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SIMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeId(this);
}

void SIMPParser::TypeIdContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SIMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypeId(this);
}


std::any SIMPParser::TypeIdContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SIMPVisitor*>(visitor))
    return parserVisitor->visitTypeId(this);
  else
    return visitor->visitChildren(this);
}

SIMPParser::TypeIdContext* SIMPParser::typeId() {
  TypeIdContext *_localctx = _tracker.createInstance<TypeIdContext>(_ctx, getState());
  enterRule(_localctx, 10, SIMPParser::RuleTypeId);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(109);
    _la = _input->LA(1);
    if (!(_la == SIMPParser::KeywordInt

    || _la == SIMPParser::KeywordFloat)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclContext ------------------------------------------------------------------

SIMPParser::VarDeclContext::VarDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SIMPParser::VarDeclContext::KeywordVar() {
  return getToken(SIMPParser::KeywordVar, 0);
}

SIMPParser::IdListContext* SIMPParser::VarDeclContext::idList() {
  return getRuleContext<SIMPParser::IdListContext>(0);
}

tree::TerminalNode* SIMPParser::VarDeclContext::Colon() {
  return getToken(SIMPParser::Colon, 0);
}

SIMPParser::TypeContext* SIMPParser::VarDeclContext::type() {
  return getRuleContext<SIMPParser::TypeContext>(0);
}

SIMPParser::OptionalInitContext* SIMPParser::VarDeclContext::optionalInit() {
  return getRuleContext<SIMPParser::OptionalInitContext>(0);
}

tree::TerminalNode* SIMPParser::VarDeclContext::Semicolon() {
  return getToken(SIMPParser::Semicolon, 0);
}


size_t SIMPParser::VarDeclContext::getRuleIndex() const {
  return SIMPParser::RuleVarDecl;
}

void SIMPParser::VarDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SIMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarDecl(this);
}

void SIMPParser::VarDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SIMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarDecl(this);
}


std::any SIMPParser::VarDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SIMPVisitor*>(visitor))
    return parserVisitor->visitVarDecl(this);
  else
    return visitor->visitChildren(this);
}

SIMPParser::VarDeclContext* SIMPParser::varDecl() {
  VarDeclContext *_localctx = _tracker.createInstance<VarDeclContext>(_ctx, getState());
  enterRule(_localctx, 12, SIMPParser::RuleVarDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111);
    match(SIMPParser::KeywordVar);
    setState(112);
    idList();
    setState(113);
    match(SIMPParser::Colon);
    setState(114);
    type();
    setState(115);
    optionalInit();
    setState(116);
    match(SIMPParser::Semicolon);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdListContext ------------------------------------------------------------------

SIMPParser::IdListContext::IdListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> SIMPParser::IdListContext::ID() {
  return getTokens(SIMPParser::ID);
}

tree::TerminalNode* SIMPParser::IdListContext::ID(size_t i) {
  return getToken(SIMPParser::ID, i);
}

std::vector<tree::TerminalNode *> SIMPParser::IdListContext::Comma() {
  return getTokens(SIMPParser::Comma);
}

tree::TerminalNode* SIMPParser::IdListContext::Comma(size_t i) {
  return getToken(SIMPParser::Comma, i);
}


size_t SIMPParser::IdListContext::getRuleIndex() const {
  return SIMPParser::RuleIdList;
}

void SIMPParser::IdListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SIMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIdList(this);
}

void SIMPParser::IdListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SIMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIdList(this);
}


std::any SIMPParser::IdListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SIMPVisitor*>(visitor))
    return parserVisitor->visitIdList(this);
  else
    return visitor->visitChildren(this);
}

SIMPParser::IdListContext* SIMPParser::idList() {
  IdListContext *_localctx = _tracker.createInstance<IdListContext>(_ctx, getState());
  enterRule(_localctx, 14, SIMPParser::RuleIdList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(118);
    match(SIMPParser::ID);
    setState(123);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SIMPParser::Comma) {
      setState(119);
      match(SIMPParser::Comma);
      setState(120);
      match(SIMPParser::ID);
      setState(125);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OptionalInitContext ------------------------------------------------------------------

SIMPParser::OptionalInitContext::OptionalInitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SIMPParser::OptionalInitContext::OpAssign() {
  return getToken(SIMPParser::OpAssign, 0);
}

SIMPParser::ConstantContext* SIMPParser::OptionalInitContext::constant() {
  return getRuleContext<SIMPParser::ConstantContext>(0);
}


size_t SIMPParser::OptionalInitContext::getRuleIndex() const {
  return SIMPParser::RuleOptionalInit;
}

void SIMPParser::OptionalInitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SIMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOptionalInit(this);
}

void SIMPParser::OptionalInitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SIMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOptionalInit(this);
}


std::any SIMPParser::OptionalInitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SIMPVisitor*>(visitor))
    return parserVisitor->visitOptionalInit(this);
  else
    return visitor->visitChildren(this);
}

SIMPParser::OptionalInitContext* SIMPParser::optionalInit() {
  OptionalInitContext *_localctx = _tracker.createInstance<OptionalInitContext>(_ctx, getState());
  enterRule(_localctx, 16, SIMPParser::RuleOptionalInit);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(129);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SIMPParser::Semicolon: {
        enterOuterAlt(_localctx, 1);

        break;
      }

      case SIMPParser::OpAssign: {
        enterOuterAlt(_localctx, 2);
        setState(127);
        match(SIMPParser::OpAssign);
        setState(128);
        constant();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncDeclContext ------------------------------------------------------------------

SIMPParser::FuncDeclContext::FuncDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SIMPParser::FuncDeclContext::KeywordFunction() {
  return getToken(SIMPParser::KeywordFunction, 0);
}

tree::TerminalNode* SIMPParser::FuncDeclContext::ID() {
  return getToken(SIMPParser::ID, 0);
}

tree::TerminalNode* SIMPParser::FuncDeclContext::LParen() {
  return getToken(SIMPParser::LParen, 0);
}

SIMPParser::ParamListContext* SIMPParser::FuncDeclContext::paramList() {
  return getRuleContext<SIMPParser::ParamListContext>(0);
}

tree::TerminalNode* SIMPParser::FuncDeclContext::RParen() {
  return getToken(SIMPParser::RParen, 0);
}

SIMPParser::RetTypeContext* SIMPParser::FuncDeclContext::retType() {
  return getRuleContext<SIMPParser::RetTypeContext>(0);
}

tree::TerminalNode* SIMPParser::FuncDeclContext::KeywordBegin() {
  return getToken(SIMPParser::KeywordBegin, 0);
}

SIMPParser::StmtListContext* SIMPParser::FuncDeclContext::stmtList() {
  return getRuleContext<SIMPParser::StmtListContext>(0);
}

tree::TerminalNode* SIMPParser::FuncDeclContext::KeywordEnd() {
  return getToken(SIMPParser::KeywordEnd, 0);
}

tree::TerminalNode* SIMPParser::FuncDeclContext::Semicolon() {
  return getToken(SIMPParser::Semicolon, 0);
}


size_t SIMPParser::FuncDeclContext::getRuleIndex() const {
  return SIMPParser::RuleFuncDecl;
}

void SIMPParser::FuncDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SIMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFuncDecl(this);
}

void SIMPParser::FuncDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SIMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFuncDecl(this);
}

